--- a/calendar.html
+++ b/calendar.html
@@ -1912,5 +1912,177 @@
       </svg>
       <span id="toast-message">Successfully saved!</span>
     </div>
+    <script>
+      // Month navigation (just updates label)
+      const monthNames = [
+        "January",
+        "February",
+        "March",
+        "April",
+        "May",
+        "June",
+        "July",
+        "August",
+        "September",
+        "October",
+        "November",
+        "December",
+      ];
+      let current = new Date(2025, 4); // May 2025
+
+      function updateMonthLabel() {
+        const monthText = `${
+          monthNames[current.getMonth()]
+        } ${current.getFullYear()}`;
+        document.getElementById("current-month").textContent = monthText;
+      }
+
+      document.getElementById("prev-month").addEventListener("click", () => {
+        current.setMonth(current.getMonth() - 1);
+        updateMonthLabel();
+      });
+
+      document.getElementById("next-month").addEventListener("click", () => {
+        current.setMonth(current.getMonth() + 1);
+        updateMonthLabel();
+      });
+
+      document.getElementById("today-btn").addEventListener("click", () => {
+        current = new Date();
+        updateMonthLabel();
+      });
+
+      updateMonthLabel();
+
+      // Attendance Calculator
+      document.getElementById("calculate-btn").addEventListener("click", () => {
+        const attended = parseInt(
+          document.getElementById("current-classes-attended").value
+        );
+        const total = parseInt(document.getElementById("total-classes").value);
+        const target = parseInt(
+          document.getElementById("target-percentage").value
+        );
+
+        const currentPercent = Math.round((attended / total) * 100);
+        document.getElementById(
+          "current-percentage"
+        ).textContent = `(${currentPercent}%)`;
+
+        let resultText = "";
+        const required = Math.ceil(
+          (target * total - 100 * attended) / (100 - target)
+        );
+
+        if (required <= 0) {
+          resultText = `🎉 You already meet the <span class="font-medium">${target}%</span> attendance requirement.`;
+        } else {
+          resultText = `You need to attend <span class="font-medium text-indigo-600">${required}</span> more classes to reach <span class="font-medium">${target}%</span> attendance.`;
+        }
+
+        document.getElementById("calculation-result").innerHTML = resultText;
+      });
+
+      // Add Event (on static calendar)
+      document.getElementById("save-event").addEventListener("click", () => {
+        const title = document.getElementById("event-title").value.trim();
+        const date = document.getElementById("event-date").value;
+
+        if (!title || !date) return alert("Please enter title and date.");
+
+        const cell = document.querySelector(
+          `.calendar-day[data-date="${date}"]`
+        );
+        if (cell) {
+          const div = document.createElement("div");
+          div.className =
+            "text-xs bg-indigo-100 text-indigo-800 rounded px-1 mb-1 truncate day-event";
+          div.textContent = title;
+          cell.appendChild(div);
+          cell.classList.add("has-event");
+        }
+
+        // Reset modal
+        document.getElementById("event-title").value = "";
+        document.getElementById("event-date").value = "";
+        document.getElementById("event-description").value = "";
+        document.getElementById("event-location").value = "";
+
+        document.getElementById("add-event-modal").classList.add("hidden");
+      });
+
+      // Modal controls
+      document.getElementById("add-event-btn").addEventListener("click", () => {
+        document.getElementById("add-event-modal").classList.remove("hidden");
+      });
+
+      document
+        .getElementById("close-event-modal")
+        .addEventListener("click", () => {
+          document.getElementById("add-event-modal").classList.add("hidden");
+        });
+
+      document.getElementById("cancel-event").addEventListener("click", () => {
+        document.getElementById("add-event-modal").classList.add("hidden");
+      });
+      function updateAttendanceCircle(percentage) {
+        const circle = document.getElementById("overall-attendance-circle");
+        const text = document.getElementById("overall-attendance-text");
+
+        const radius = 45;
+        const circumference = 2 * Math.PI * radius;
+        const offset = circumference - (percentage / 100) * circumference;
+
+        circle.setAttribute("stroke-dasharray", `${circumference}`);
+        circle.setAttribute("stroke-dashoffset", offset);
+        text.textContent = `${percentage}%`;
+
+        const status = document.getElementById("attendance-status");
+        if (percentage >= 75) {
+          status.textContent = "Good standing ✅";
+          status.className = "text-sm font-medium attendance-good mt-1";
+        } else if (percentage >= 60) {
+          status.textContent = "Warning ⚠️";
+          status.className = "text-sm font-medium attendance-warning mt-1";
+        } else {
+          status.textContent = "At risk ❌";
+          status.className = "text-sm font-medium attendance-danger mt-1";
+        }
+      }
+
+      // Hook into the calculator
+      document.getElementById("calculate-btn").addEventListener("click", () => {
+        const attended = parseInt(
+          document.getElementById("current-classes-attended").value
+        );
+        const total = parseInt(document.getElementById("total-classes").value);
+        const target = parseInt(
+          document.getElementById("target-percentage").value
+        );
+
+        const currentPercent = Math.round((attended / total) * 100);
+        document.getElementById(
+          "current-percentage"
+        ).textContent = `(${currentPercent}%)`;
+
+        updateAttendanceCircle(currentPercent);
+
+        const required = Math.ceil(
+          (target * total - 100 * attended) / (100 - target)
+        );
+        const resultText = document.getElementById("calculation-result");
+
+        if (required <= 0) {
+          resultText.innerHTML = `🎉 You already meet the <span class="font-medium">${target}%</span> attendance requirement.`;
+        } else {
+          resultText.innerHTML = `You need to attend <span class="font-medium text-indigo-600">${required}</span> more classes to reach <span class="font-medium">${target}%</span> attendance.`;
+        }
+      });
+
+      // Optional: initialize on load
+      window.addEventListener("DOMContentLoaded", () => {
+        document.getElementById("calculate-btn").click(); // simulate initial calc
+      });
+    </script>
   </body>
 </html>
