--- a/calendar.html
+++ b/calendar.html
@@ -634,7 +634,7 @@
                 class="bg-indigo-100 p-1 rounded-full text-indigo-600 hover:text-indigo-700 focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-indigo-500">
                 <img
                   class="h-8 w-8 rounded-full"
-                  src="https://images.unsplash.com/photo-1472099645785-5658abf4ff4e?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=2&w=256&h=256&q=80"
+                  src="https://randomuser.me/api/portraits/men/44.jpg"
                   alt="Profile" />
               </div>
             </div>
