fixed a minor text bug

--- a/calendar.html
+++ b/calendar.html
@@ -2042,7 +2042,7 @@
           status.textContent = "Good standing ✅";
           status.className = "text-sm font-medium attendance-good mt-1";
         } else if (percentage >= 60) {
-          status.textContent = "Warning ⚠️";
+          status.textContent = "Warning ⚠️, Attend more classes.";
           status.className = "text-sm font-medium attendance-warning mt-1";
         } else {
           status.textContent = "At risk ❌";
