Fixed the names in the select tag

--- a/login.html
+++ b/login.html
@@ -994,10 +994,15 @@
                   <option value="iitr">
                     Indian institute of technology Ropar
                   </option>
-                  <option value="columbia">Columbia University</option>
-                  <option value="chicago">University of Chicago</option>
-                  <option value="upenn">University of Pennsylvania</option>
-                  <option value="jhu">Johns Hopkins University</option>
+                  <option value="nitw">
+                    National Institute of Technology Warangal
+                  </option>
+                  <option value="manit">
+                    Maulana Azad National Institute of Technology Bhopal
+                  </option>
+                  <option value="uit">
+                    University Institute of Technology Bhopal
+                  </option>
                 </select>
               </div>
 
